// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessToken actions creates FETCH_ACCESS_TOKEN_FAILURE when fetching access token has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_ACCESS_TOKEN_REQUEST",
  },
  Object {
    "type": "FETCH_ACCESS_TOKEN_FAILURE",
  },
]
`;

exports[`accessToken actions creates FETCH_ACCESS_TOKEN_SUCCESS when fetching access token has been resolved 1`] = `
Array [
  Object {
    "type": "FETCH_ACCESS_TOKEN_REQUEST",
  },
  Object {
    "payload": "ya29.GlyrBCJQJoIYFzocIunVN-CfjQZMG4oyVuAB6v_x_Z3FRnViyPy_deqRdwSAipQtKc9Nb2RudM9UISwI8SGNXxsJ1t3QHddeCdnoCjsM_vhLa9FlFVqMN_seI7oljg",
    "type": "FETCH_ACCESS_TOKEN_SUCCESS",
  },
]
`;

exports[`accessToken actions should create an action to handle an error 1`] = `
Object {
  "type": "FETCH_ACCESS_TOKEN_FAILURE",
}
`;

exports[`accessToken actions should create an action to receive an access token 1`] = `
Object {
  "payload": "ya29.GlyrBCJQJoIYFzocIunVN-CfjQZMG4oyVuAB6v_x_Z3FRnViyPy_deqRdwSAipQtKc9Nb2RudM9UISwI8SGNXxsJ1t3QHddeCdnoCjsM_vhLa9FlFVqMN_seI7oljg",
  "type": "FETCH_ACCESS_TOKEN_SUCCESS",
}
`;

exports[`accessToken actions should create an action to request an access token 1`] = `
Object {
  "type": "FETCH_ACCESS_TOKEN_REQUEST",
}
`;
